# ontology-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  action.yml  entrypoint.sh
.github/workflows/: test-action.yml
configs/: example.toml
src/: config.rs  lib.rs  main.rs  models.rs  render_html.rs
static/scripts/: fixi.js
static/styles/: base.css  pico.min.css
templates/: base.html  entity.html  macros.html  ontology.html
test/ontology/: bfo.owx
